--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -1,12 +1,13 @@
 @import 'blocks/_variables.scss';
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import 'blocks/_block.scss';
 @import 'blocks/_header.scss';
+@import 'blocks/_footer.scss';
 
 h1 {
     font-size: 54px;
     font-family: $montserrat;
-    color: brown;
 }
 
 h2 {
@@ -22,7 +23,8 @@ h3 {
 p {
     font-size: $p-regular;
     font-family: $montserrat;
-    font-size: $p-regular-weight;
+    font-weight: $p-regular-weight;
+    margin: 0;
 }
 
 a {
@@ -75,3 +77,59 @@ a {
         border: 2px $mercury solid;
     }
 }
+
+button[type=submit] {
+    background-color: $dark-accent;
+    color: $white;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 0;
+    font-family: $montserrat;
+    pointer-events: none;
+    &.active {
+        background-color: $seaFoam;
+        pointer-events: initial;
+
+        &:hover {
+            background-color: $mercury;
+            color: $black;
+        }
+
+        &:active, &:focus {
+            background-color: $seaFoam;
+            color: $white;
+            outline: none;
+        }
+    }
+}
+
+// Inputs 
+
+input[type=text] {
+    color: black;
+    background-color: white;
+    border: 2px solid $mercury;
+    border-radius: 10px;
+    font-family: $montserrat;
+    font-size: 16px;
+    box-shadow: none;
+    padding: 16px 16px 16px 16px;
+    height: 42px;
+
+    &::placeholder {
+        color: black;
+    }
+
+    &:hover {
+        background-color: $light-mercury;
+    }
+
+    &:active, &:focus {
+        border: 2px solid $seaFoam;
+        outline: none;
+        background-color: $white;
+    }
+}
+
+
