--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -1,9 +1,11 @@
 @import 'blocks/_variables.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import 'blocks/_block.scss';
 @import 'blocks/_header.scss';
 @import 'blocks/_footer.scss';
+@import 'blocks/_delivery-banner.scss';
+@import 'blocks/_features.scss';
+@import 'blocks/_product.scss';
 
 h1 {
     font-size: 54px;
@@ -35,6 +37,12 @@ a {
 
     &:focus {
         outline: none;
+    }
+}
+
+body{
+    &.modal-open {
+        overflow: hidden;
     }
 }
 
@@ -75,6 +83,25 @@ a {
     &:active, &:focus {
         background-color: $mercury;
         border: 2px $mercury solid;
+    }
+}
+
+.tertiary-button {
+    font-family: $montserrat;
+    font-weight: 400;
+    font-size: 16px;
+    color: $seaFoam;
+    cursor: pointer;
+
+    &:hover {
+        text-decoration: underline;
+        text-underline-offset: 3px;
+    }
+
+    &:active, &:focus {
+        text-decoration: underline;
+        text-underline-offset: 3px;
+        color: $vineyard;
     }
 }
 
@@ -131,5 +158,49 @@ input[type=text] {
         background-color: $white;
     }
 }
+
+.search-input {
+    margin-left: 25px;
+    input[type=text] {
+        color: black;
+        background-color: white;
+        border: none;
+        border-radius: 0px;
+        font-family: $montserrat;
+        font-size: 16px;
+        padding: 0 16px;
+        height: 25px;
+        position: relative;
+
+        &::placeholder {
+            color: black;
+        }
+
+        &:hover {
+            background-color: none;
+        }
+
+        &:active, &:focus {
+            border: none;
+            outline: none;
+            background-color: $white;
+        }
+    }
+
+    label {
+
+        &::before {
+            content: url("data:image/svg+xml,%3Csvg width='18' height='18' viewBox='0 0 18 18' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17.7473 16.4825L14.4102 13.17C15.7056 11.5537 16.3329 9.50215 16.1631 7.43721C15.9934 5.37227 15.0396 3.45088 13.4978 2.06813C11.9559 0.685379 9.94333 -0.0536394 7.87376 0.00303437C5.80419 0.0597081 3.83498 0.907766 2.37103 2.37283C0.907077 3.83789 0.0596628 5.8086 0.00303206 7.87974C-0.0535986 9.95088 0.684859 11.965 2.06656 13.508C3.44826 15.051 5.36819 16.0056 7.43156 16.1754C9.49493 16.3453 11.5449 15.7175 13.16 14.4212L16.47 17.7337C16.5536 17.8181 16.6531 17.8851 16.7627 17.9308C16.8723 17.9765 16.9899 18 17.1086 18C17.2274 18 17.3449 17.9765 17.4546 17.9308C17.5642 17.8851 17.6636 17.8181 17.7473 17.7337C17.9094 17.5659 18 17.3416 18 17.1081C18 16.8747 17.9094 16.6504 17.7473 16.4825ZM8.11399 14.4212C6.8687 14.4212 5.65139 14.0516 4.61597 13.3593C3.58056 12.6669 2.77355 11.6828 2.297 10.5315C1.82045 9.38009 1.69577 8.11316 1.93871 6.89088C2.18165 5.6686 2.78131 4.54586 3.66186 3.66464C4.54241 2.78343 5.66429 2.18331 6.88565 1.94018C8.107 1.69706 9.37297 1.82184 10.5235 2.29875C11.674 2.77566 12.6573 3.58328 13.3491 4.61948C14.041 5.65568 14.4102 6.87392 14.4102 8.12015C14.4102 9.79129 13.7469 11.394 12.5661 12.5757C11.3853 13.7573 9.78386 14.4212 8.11399 14.4212Z' fill='black'/%3E%3C/svg%3E");
+            display: block;
+            width: 18px;
+            height: 18px;
+            position: absolute;
+            left: 24px;
+            top: 21px;
+        }
+
+    }
+}
+
 
 
