--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -7,6 +7,9 @@
 @import 'blocks/_features.scss';
 @import 'blocks/_product.scss';
 @import 'blocks/_hero.scss';
+@import 'blocks/_breadcrumb.scss';
+@import 'blocks/_featured-products.scss';
+@import 'blocks/_product-infos.scss';
 
 h1 {
     font-size: 54px;
@@ -230,10 +233,19 @@ input[type=text] {
         button {
             display: none !important;
         }
+
+        &:hover {
+            outline: 2px solid $seaFoam;
+            background-color: white;
+        }
     }
 
     li.slick-active {
         background-color: $seaFoam;
+
+        &:hover {
+            outline: none;
+        }
     }
 }
 
