--- a/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
+++ b/storefront-child/build_assets/scss/blocks/_baloon-columns.scss
@@ -1,3 +1,68 @@
-.baloon-columns {
-    
+.baloon-colums {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 40px;
+    &__slider {
+        display: flex;
+        align-items: center;
+        overflow: hidden;
+        height: fit-content;
+        &__main {
+            width: 744px;
+            height: 494px;
+            margin-right: 8px;
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center center;
+            }
+        }
+
+        &__gallery {
+            position: relative;
+            overflow: hidden;
+            width: 560px;
+            margin-left: 8px;
+            .slick-list {
+                position: relative;
+                left: -144px;
+                width: 704px;
+            }
+            &__slide {
+                width: 128px;
+                height: 494px !important;
+                margin-right: 16px;
+                outline: none!important;
+                cursor: pointer;
+                border-radius: 40px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    object-position: center center;
+                    border-radius: 40px;
+                    z-index: -1;
+                }
+                &.slick-current.slick-active {
+                    outline: none!important;
+                }
+            }
+        }
+        .slick-arrow {
+            position: absolute;
+            top: 50%;
+            z-index: 50;
+            margin-top: -12px;
+        }
+
+        .slick-prev {
+            left: 0;
+        }
+        .slick-next {
+            right: 0;
+        }
+    }
+ 
 }
