--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -11,6 +11,7 @@
 @import 'blocks/_featured-products.scss';
 @import 'blocks/_product-infos.scss';
 @import 'blocks/_baloon-columns.scss';
+@import 'blocks/_environment.scss';
 
 h1 {
     font-size: 54px;
