--- a/storefront-child/build_assets/scss/blocks/_environment.scss
+++ b/storefront-child/build_assets/scss/blocks/_environment.scss
@@ -26,6 +26,9 @@
             width: calc(50% - 12.5px);
             margin-bottom: 32px;
             column-gap: 16px;
+            @media (max-width: $tablet) {
+                display: none;
+            }
             &__image {
                 width: 28.5px;
                 height: 26px;
@@ -35,6 +38,37 @@
             
             &__paragraph {
                width: 100%;
+            }
+        }
+        &__option-mobile {
+            display: none;
+            padding: 16px;
+            background-color: $light-mercury;
+            border-radius: 10px;
+            margin-bottom: 24px;
+
+            @media (max-width: $tablet) {
+                display: block;
+
+                &__title {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    &__icon {
+                        display: flex;
+                        align-items: center;
+                        p {
+                            margin-left: 13px;
+                        }
+                    }
+                    svg {
+                        cursor: pointer;
+                    }
+                }
+
+                &__text {
+                    margin-top: 27px;
+                }
             }
         }
     }
