--- a/storefront-child/build_assets/scss/blocks/_product-infos.scss
+++ b/storefront-child/build_assets/scss/blocks/_product-infos.scss
@@ -2,53 +2,16 @@
     max-width: 1320px;
     width: 100%;
     margin: 0 auto;
-    padding: 48px 40px;
-    border: 1px solid red;
-
-    @media (max-width: $desktop) {
-        padding: 36px 32px;
-        max-width: 100%;
-    }
-
-    @media (max-width: $tablet) {
-        padding: 36px 32px;
-    }
-
-    h3 {
-        font-size: 36px;
-        font-weight: 300;
-        font-family: $montserrat;
-        color: black;
-        text-align: center;
-        margin-bottom: 31px;
-    }
-
-    p {
-        font-size: 16px;
-        font-weight: 400;
-        font-family: $montserrat;
-        color: black;
-    }
-
-    .separator {
+    padding: 0px 40px;
+    &__button{
         display: flex;
-        column-gap: 12px;
+        justify-content: center;
         align-items: center;
-        margin-bottom: 48px;
-        .line {
-            height: 2px;
-            width: 50%;
-            background-color: $dark-accent;
-        }
-        .circle {
-            width: 32px;
-            height: 32px;
-            background-color: $light-mercury;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
     }
-    
+    &__button-ui{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+    }
 }
