--- a/storefront-child/build_assets/scss/blocks/_product-infos.scss
+++ b/storefront-child/build_assets/scss/blocks/_product-infos.scss
@@ -4,14 +4,90 @@
     margin: 0 auto;
     padding: 0px 40px;
     &__button{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: flex !important;
+        align-items: center !important;
+        flex-direction: column !important;
+        h3{
+            width: auto;
+            color: #000;
+            /* H2 - Montserrat Light - 36px */
+            font-family: Montserrat;
+            font-size: 36px;
+            font-style: normal;
+            font-weight: 300;
+            line-height: normal;
+            letter-spacing: -1.26px;
+        }
     }
     &__button-ui{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
+        width: 100%;
+        height: 37px;
+        position: relative;
+        .line{
+            width: 100%;
+            height: 2px;
+            background-color: #ACBCB5;
+            position: absolute;
+            top:17.5px;
+        }
+        .circle{
+            width: 37px;
+            border-radius: 100%;
+            height: 37px;
+            background-color: #ACBCB5;
+            border: solid 5px #fff;
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            left: calc(50% - 16px);
+        }
+        p{
+            color:#fff;
+        }
+    }
+    .ui-state-active, .ui-state-default{
+        background-color: #fff !important;
+        border-style: none;
+    }
+    .ui-state-default .circle{
+        .line {
+            background: #fff;
+            height: 17px;
+            position: relative;
+            width: 2px;
+            top: 0px;
+        }
+        .line:after {
+            background: #fff;
+            content: "";
+            height: 2px;
+            left: -7px;
+            position: absolute;
+            top: 7.5px;
+            width: 16px;
+        }
+    }
+    .ui-state-active .circle{
+        .line{
+            background: #fff !important;
+            height: 2px;
+            width: 16px;
+        }
+        .line:after {
+            opacity: 0;
+        }
+    }
+    .ui-widget-content{
+        border: none !important;
+    }
+    .ui-accordion-content{
+        color: #000;
+        font-family: Montserrat;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px; /* 125% */
+        letter-spacing: -0.64px;
     }
 }
