--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -12,6 +12,9 @@
 @import 'blocks/_product-infos.scss';
 @import 'blocks/_baloon-columns.scss';
 @import 'blocks/_environment.scss';
+@import 'blocks/_text-image.scss';
+@import 'blocks/_faq.scss';
+@import 'blocks/_map.scss';
 
 h1 {
     font-size: 54px;
