--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -15,6 +15,9 @@
 @import 'blocks/_text-image.scss';
 @import 'blocks/_faq.scss';
 @import 'blocks/_map.scss';
+@import 'blocks/_contact-form.scss';
+@import 'blocks/_get-a-quote.scss';
+@import 'custom-dropdown.scss';
 
 h1 {
     font-size: 54px;
@@ -95,7 +98,7 @@ body{
         border: 2px $seaFoam solid;
     }
 
-    &:active, &:focus {
+    &:active, &:focus, &.active {
         background-color: $mercury;
         border: 2px $mercury solid;
     }
@@ -148,7 +151,7 @@ button[type=submit] {
 
 // Inputs 
 
-input[type=text] {
+input[type=text], textarea {
     color: black;
     background-color: white;
     border: 2px solid $mercury;
@@ -215,6 +218,54 @@ input[type=text] {
         }
 
     }
+}
+
+// Checkboxes
+
+input[type=checkbox] {
+    width: initial;
+    height: initial;
+    -webkit-appearance: button;
+    position: relative;
+    border: 1.5px solid $seaFoam;
+    border-radius: 3px;
+    background-color: white;
+    cursor: pointer;
+    line-height: 0;
+    margin: 0 .6em 0 0;
+    outline: 0;
+    padding: 0 !important;
+    vertical-align: text-top;
+    height: 10px;
+    width: 10px;
+    -webkit-appearance: none;
+
+    &:hover:not(:checked) { 
+        background-color: $seaFoam;
+
+        &:before {
+            display: none;
+        } 
+    }
+}
+
+input[type=checkbox]:checked {
+    background-color: $seaFoam;
+}
+
+input[type=checkbox]:before {
+    content: "";
+    position: absolute;
+    right: 52%;
+    top: 65%;
+    border-radius: 1px;
+    width: 2px;
+    height: 5px;
+    border: solid #fff;
+    border-width: 0 1.5px 1.5px 0;
+    margin: -1px -1px 0;
+    transform: rotate(45deg) translate(-50%,-50%);
+    z-index: 2;
 }
 
 // Slick 
