--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -17,6 +17,7 @@
 @import 'blocks/_map.scss';
 @import 'blocks/_contact-form.scss';
 @import 'blocks/_get-a-quote.scss';
+@import 'blocks/_blogs.scss';
 @import 'custom-dropdown.scss';
 
 h1 {
