--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -18,6 +18,8 @@
 @import 'blocks/_contact-form.scss';
 @import 'blocks/_get-a-quote.scss';
 @import 'blocks/_blogs.scss';
+@import 'blocks/_404.scss';
+@import 'blocks/_title-paragraph.scss';
 @import 'custom-dropdown.scss';
 
 h1 {
