--- a/storefront-child/build_assets/scss/style.scss
+++ b/storefront-child/build_assets/scss/style.scss
@@ -20,6 +20,7 @@
 @import 'blocks/_blogs.scss';
 @import 'blocks/_404.scss';
 @import 'blocks/_title-paragraph.scss';
+@import 'blocks/_legal-categories.scss';
 @import 'custom-dropdown.scss';
 
 h1 {
