--- a/storefront-child/build_assets/scss/blocks/_environment.scss
+++ b/storefront-child/build_assets/scss/blocks/_environment.scss
@@ -2,9 +2,9 @@
     max-width: 1400px;
     width: 100%;
     margin: 0 auto;
-    padding: 48px 40px 94px 40px;
+    padding: 48px 40px 48px 40px;
     @media (max-width: 1024px) {
-        padding: 48px 32px 94px 32px;
+        padding: 48px 32px 48px 32px;
         max-width: 100%;
     }
     @media (max-width: $tablet) {
@@ -143,5 +143,12 @@
                 }
             }
 
+    }
+
+    &.higher-margins {
+        padding-bottom: 126px;
+        @media (max-width: $tablet) {
+            padding-bottom: 64px;
+        }
     }
 }
